cleu-orm-derive/tests/fail/non-named-fiels.rs

#[derive(cleu_orm_derive::TableParams)]
pub struct Foo(i32);

fn main() {
}