cleu-orm-derive/tests/fail/non-named-fiels.stderr
error: Table element must be a structure with named fields
 --> tests/fail/non-named-fiels.rs:3:1
  |
3 | pub struct Foo(i32);
  | ^^^^^^^^^^^^^^^^^^^^
